# sca_tool_evaluation

./: .env_example  README.md  env_documentation.sh  pyproject.toml
experimental_results/Test_dtrack_without_Snyk_Analyser_20260329T110444Z/: ground_truth.stat.txt  stats.json
experimental_results/Test_for_Paper_ready_01_20260328T152709Z/: ground_truth.stat.txt  stats.json
experimental_results/Test_for_Paper_ready_02_20260328T165907Z/: ecosystem_summary.tex  ground_truth.stat.txt
experimental_results/Test_for_Paper_ready_03_20260328T184035Z/: aggregated_results.tex  ground_truth.stat.txt
exportToHTML/: base.py.html  dtrack.py.html  evaltech.py.html  evaltech_simple_voting.py.html  fossa.py.html  github_advisory.py.html  index.html  mend.py.html  nvd.py.html  oss_index.py.html  osv.py.html  snyk.py.html  trivy.py.html
src/: README_tool_evaluation.md  evaluate.py  methodology.md
src/evaluation/: evaluate.py  evaluate_save.py  evaluate_save2.py  temporal_runner.py  temporal_runner_integrated.py  temporal_runner_save.py  temporal_runner_save2.py  (+7 more)
tools/: aggregate_experiment.py  build_ground_truth.sh  dtrack_prepare.sh  evaluate_snyk.sh  evaluate_snyk_save.sh  evaluate_tools.sh  generate_poetry_adds.sh  gt_hash.py  poetry_add_commands.sh  run_experiment.sh  run_experiment_runnable.sh  run_experiment_save2.sh  run_experiment_save3.sh  run_experiment_save4.sh  run_experiment_save5.sh  run_experiment_save6.sh  run_experiment_save7.sh  run_experiment_save_long.sh  run_experiment_updated.sh  run_temporal.sh  run_temporal_save.sh  run_voting_from_evaluations.sh
(+229 files in other folders)
