[project]
name = "sca-tool-evaluation"
version = "0.1.0"
description = "Evaluation of SCA Tools and Services with an OSV Ground Truth"
authors = [
    {name = "Peter Mandl",email = "peter.mandl@hm.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
